<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalcActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50sp" >

        <EditText
            android:id="@+id/number_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/first_number"
            android:inputType="numberDecimal|numberSigned"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/number_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/second_number"
            android:inputType="numberDecimal|numberSigned"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/number_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/third_number"
            android:inputType="numberDecimal|numberSigned"
            tools:ignore="Autofill" />

    </LinearLayout>

    <Button
        android:id="@+id/calculation_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/result_button" />

    <LinearLayout
        android:id="@+id/cat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/raccoon"
            android:layout_width="wrap_content"
            android:layout_height="293dp"
            android:src="@drawable/raccoon"
            tools:layout_editor_absoluteY="-39dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/back_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>